working on broadband response and handler